src/App.css
@import url('https://fonts.googleapis.com/css2?family=Allura&family=Gelasio:wght@700&display=swap');
.App {
  text-align: center;
}

body{
  background: rgb(34,193,195);
  background: linear-gradient(160deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 120%);
}

h1{
  font-family: 'Gelasio', serif;
  font-weight: bolder;
}
h3{
  margin-top: -20px;
  font-family: 'Allura', cursive;
}

input{
  font-size: 1.2rem;
  border: 4px solid black;
  height: 3rem;
  width: 55%;
}

.footer{
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  border: 2px double black;
  background: rgb(34,193,195);
  background: linear-gradient(310deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 120%);
}

.list-non-bullet {
  list-style: none;
  padding-inline-start: 0px;
}

.list-item-inline {
  display: inline;
  padding: 0rem 0.5rem;
}
.link .fa-brands{
  color: #000000;
  font-size: 1.2rem;
  transition: .5s;
}
.link .fa-brands:hover {
  color: #ffffff;
}

@media only screen and (max-width: 600px){
  
  .footer{
    position: relative;
    background: linear-gradient(360deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 150%);
    border: 1px solid black;
  }
}

